TimeEntry/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Budget</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Total Project Fees</fullName>
                </value>
                <value>
                    <fullName>Fees per Task</fullName>
                </value>
                <value>
                    <fullName>Total Project Hours</fullName>
                </value>
                <value>
                    <fullName>Hours per Task</fullName>
                </value>
                <value>
                    <fullName>Hours per Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_resets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget resets every month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_Per_Task__c</fullName>
        <label>Fees Per Task</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Option__c</fullName>
        <label>Hourly Rate Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Hourly Rate</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Person Hourly Rate</fullName>
                </value>
                <value>
                    <fullName>Project Hourly Rate</fullName>
                </value>
                <value>
                    <fullName>Task Hourly Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Per_Person__c</fullName>
        <label>Hours Per Person</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Task__c</fullName>
        <label>Hours Per Task</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permissions__c</fullName>
        <label>Permissions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Show project report to project managers on this project, and administrators.</fullName>
                </value>
                <value>
                    <fullName>Show project report to everyone on the project.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Hourly_Rate__c</fullName>
        <label>Person Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Exceeds_Percentage__c</fullName>
        <label>Project Exceeds Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Hourly_Rate__c</fullName>
        <label>Project Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bgt Inclds blbl &amp; nblbl project expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send email if project exceeds % of bgt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Hourly_Rate__c</fullName>
        <label>Task Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Fees__c</fullName>
        <label>Total Project Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Hours__c</fullName>
        <label>Total Project Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>